--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ license = "MIT OR Apache-2.0"
 anyhow = "1.0.75"
 base64 = "0.21.3"
 bytesize = "1.3"
+cacache = "11.6.0"
 cargo = { path = "" }
 cargo-credential = { version = "0.4.0", path = "credential/cargo-credential" }
 cargo-credential-libsecret = { version = "0.3.1", path = "credential/cargo-credential-libsecret" }
@@ -124,6 +125,7 @@ path = "src/cargo/lib.rs"
 anyhow.workspace = true
 base64.workspace = true
 bytesize.workspace = true
+cacache.workspace = true
 cargo-platform.workspace = true
 cargo-credential.workspace = true
 cargo-credential-libsecret.workspace = true
