--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ license = "MIT OR Apache-2.0"
 [workspace.dependencies]
 anyhow = "1.0.75"
 base64 = "0.21.3"
+bincode = "1.3.3"
 bytesize = "1.3"
 cacache = { version = "11.7.0", default-features = false, features = ["mmap"] } # TODO Do we need mmap?
 cargo = { path = "" }
@@ -124,6 +125,7 @@ path = "src/cargo/lib.rs"
 [dependencies]
 anyhow.workspace = true
 base64.workspace = true
+bincode.workspace = true
 bytesize.workspace = true
 cacache.workspace = true
 cargo-platform.workspace = true
