--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ license = "MIT OR Apache-2.0"
 anyhow = "1.0.75"
 base64 = "0.21.3"
 bytesize = "1.3"
-cacache = { version = "11.7.0", default-features = false, features = ["mmap"] } # TODO Do we need mmap?
+cacache = { version = "11.7.0", default-features = false, features = ["mmap"] }
 cargo = { path = "" }
 cargo-credential = { version = "0.4.0", path = "credential/cargo-credential" }
 cargo-credential-libsecret = { version = "0.3.1", path = "credential/cargo-credential-libsecret" }
